// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api shoots should create a shoot 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "name": "newShoot",
        "namespace": "garden-foo",
        "uid": "garden-foo--newShoot",
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "newPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
    },
  ],
]
`;

exports[`api shoots should create a shoot 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "foo@example.org",
    },
    "name": "newShoot",
    "namespace": "garden-foo",
    "resourceVersion": "42",
    "uid": 21,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "newPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--newShoot",
  },
}
`;

exports[`api shoots should delete a shoot 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "confirmation.gardener.cloud/deletion": "true",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
]
`;

exports[`api shoots should delete a shoot 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "confirmation.gardener.cloud/deletion": "true",
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should patch annotations 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "foo": "bar",
        },
      },
    },
  ],
]
`;

exports[`api shoots should patch annotations 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "foo": "bar",
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace addons 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "addons": Array [
          Object {
            "testAddon": Object {
              "enabled": true,
              "foo": "bar",
            },
          },
        ],
      },
    },
  ],
]
`;

exports[`api shoots should replace addons 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "addons": Array [
      Object {
        "testAddon": Object {
          "enabled": true,
          "foo": "bar",
        },
      },
    ],
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace control plane high availablility 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "controlPlane": Object {
          "highAvailability": Object {
            "failureTolerance": Object {
              "type": "node",
            },
          },
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace control plane high availablility 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "controlPlane": Object {
      "highAvailability": Object {
        "failureTolerance": Object {
          "type": "node",
        },
      },
    },
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace dns 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "dns": Object {
          "domain": "foo.bar",
          "providers": Array [
            Object {
              "primary": "true",
              "secretName": "foo-secret",
              "type": "foo-provider",
            },
          ],
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace dns 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "dns": Object {
      "domain": "foo.bar",
      "providers": Array [
        Object {
          "primary": "true",
          "secretName": "foo-secret",
          "type": "foo-provider",
        },
      ],
    },
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace hibernation enabled 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "hibernation": Object {
          "enabled": true,
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace hibernation enabled 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": true,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace hibernation schedules 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "hibernation": Object {
          "schedules": Array [
            Object {
              "end": "00 08 * * 1,2,3,4,5,6",
              "start": "00 17 * * 1,2,3,4,5,6",
            },
          ],
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace hibernation schedules 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
      "schedules": Array [
        Object {
          "end": "00 08 * * 1,2,3,4,5,6",
          "start": "00 17 * * 1,2,3,4,5,6",
        },
      ],
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace purpose 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "purpose": "testing",
      },
    },
  ],
]
`;

exports[`api shoots should replace purpose 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "testing",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "put",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": undefined,
      "kind": undefined,
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "baz@example.org",
        },
        "labels": Object {
          "foo": "bar",
        },
        "name": "barShoot",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "barPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": Object {
        "advertisedAddresses": Array [
          Object {
            "name": "external",
            "url": "https://api.barShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--barShoot",
      },
    },
  ],
]
`;

exports[`api shoots should replace shoot 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "baz@example.org",
    },
    "labels": Object {
      "foo": "bar",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot kubernetes enableStaticTokenKubeconfig 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/json-patch+json",
    },
    Array [
      Object {
        "op": "replace",
        "path": "/spec/kubernetes/enableStaticTokenKubeconfig",
        "value": true,
      },
    ],
  ],
]
`;

exports[`api shoots should replace shoot kubernetes enableStaticTokenKubeconfig 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "enableStaticTokenKubeconfig": true,
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot kubernetes version 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/json-patch+json",
    },
    Array [
      Object {
        "op": "replace",
        "path": "/spec/kubernetes/version",
        "value": "1.17.1",
      },
    ],
  ],
]
`;

exports[`api shoots should replace shoot kubernetes version 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.17.1",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot maintenance data 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "maintenance": Object {
          "autoUpdate": Object {
            "kubernetesVersion": true,
            "machineImageVersion": undefined,
          },
          "timeWindow": Object {
            "begin": "230000+0000",
            "end": "000000+0000",
          },
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace shoot maintenance data 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "maintenance": Object {
      "autoUpdate": Object {
        "kubernetesVersion": true,
      },
      "timeWindow": Object {
        "begin": "230000+0000",
        "end": "000000+0000",
      },
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot seedname 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot/binding",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/json-patch+json",
    },
    Array [
      Object {
        "op": "replace",
        "path": "/spec/seedName",
        "value": "foo-new-seed",
      },
    ],
  ],
]
`;

exports[`api shoots should replace shoot seedname 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "foo-new-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot workers 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "provider": Object {
          "network": Object {
            "zones": Array [
              Object {
                "workers": "10.250.0.0/20",
              },
            ],
          },
          "workers": Array [
            Object {
              "name": "worker-g5rk1",
            },
          ],
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace shoot workers 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "network": Object {
        "zones": Array [
          Object {
            "workers": "10.250.0.0/20",
          },
        ],
      },
      "type": "fooInfra",
      "workers": Array [
        Object {
          "name": "worker-g5rk1",
        },
      ],
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should return a shoot 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
]
`;

exports[`api shoots should return a shoot 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "advertisedAddresses": Array [
      Object {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should return shoot info 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets/barShoot.kubeconfig",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets/barShoot.ca-cluster",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/kube-system/configmaps/cluster-identity",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden/shoots/infra1-seed",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets/barShoot.monitoring",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
]
`;

exports[`api shoots should return shoot info without gardenlogin kubeconfig 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/dummyShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets/dummyShoot.kubeconfig",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden/shoots/infra4-seed-without-secretRef",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets/dummyShoot.monitoring",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
]
`;

exports[`api shoots should return shoot info without gardenlogin kubeconfig: body 1`] = `
Object {
  "canLinkToSeed": false,
  "cluster_password": "pass-foo-dummyShoot",
  "cluster_username": "user-foo-dummyShoot",
  "dashboardUrlPath": "/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/",
  "kubeconfig": Any<String>,
  "monitoringPassword": "pass-garden-foo-dummyShoot.monitoring",
  "monitoringUsername": "user-garden-foo-dummyShoot.monitoring",
  "seedShootIngressDomain": "foo--dummyShoot.ingress.foo-south.infra1.example.org",
  "serverUrl": "https://api.dummyShoot.foo.shoot.cluster",
}
`;

exports[`api shoots should return shoot info without gardenlogin kubeconfig: body.kubeconfig 1`] = `
Object {
  "apiVersion": "v1",
  "clusters": Array [
    Object {
      "cluster": Object {
        "certificate-authority-data": "Y2VydGlmaWNhdGUtYXV0aG9yaXR5LWRhdGE=",
        "server": "https://api.dummyShoot.foo.shoot.cluster",
      },
      "name": "shoot--foo--dummyShoot",
    },
  ],
  "contexts": Array [
    Object {
      "context": Object {
        "cluster": "shoot--foo--dummyShoot",
        "user": "shoot--foo--dummyShoot",
      },
      "name": "shoot--foo--dummyShoot",
    },
  ],
  "current-context": "shoot--foo--dummyShoot",
  "kind": "Config",
  "users": Array [
    Object {
      "name": "shoot--foo--dummyShoot",
      "user": Object {
        "client-certificate-data": "Y2xpZW50LWNlcnRpZmljYXRlLWRhdGE=",
        "client-key-data": "Y2xpZW50LWtleS1kYXRh",
      },
    },
  ],
}
`;

exports[`api shoots should return shoot info: body 1`] = `
Object {
  "canLinkToSeed": false,
  "cluster_password": "pass-foo-barShoot",
  "cluster_username": "user-foo-barShoot",
  "dashboardUrlPath": "/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/",
  "kubeconfig": Any<String>,
  "kubeconfigGardenlogin": Any<String>,
  "monitoringPassword": "pass-garden-foo-barShoot.monitoring",
  "monitoringUsername": "user-garden-foo-barShoot.monitoring",
  "seedShootIngressDomain": "foo--barShoot.ingress.foo-east.infra1.example.org",
  "serverUrl": "https://api.barShoot.foo.shoot.cluster",
}
`;

exports[`api shoots should return shoot info: body.kubeconfig 1`] = `
Object {
  "apiVersion": "v1",
  "clusters": Array [
    Object {
      "cluster": Object {
        "certificate-authority-data": "Y2VydGlmaWNhdGUtYXV0aG9yaXR5LWRhdGE=",
        "server": "https://api.barShoot.foo.shoot.cluster",
      },
      "name": "shoot--foo--barShoot",
    },
  ],
  "contexts": Array [
    Object {
      "context": Object {
        "cluster": "shoot--foo--barShoot",
        "user": "shoot--foo--barShoot",
      },
      "name": "shoot--foo--barShoot",
    },
  ],
  "current-context": "shoot--foo--barShoot",
  "kind": "Config",
  "users": Array [
    Object {
      "name": "shoot--foo--barShoot",
      "user": Object {
        "client-certificate-data": "Y2xpZW50LWNlcnRpZmljYXRlLWRhdGE=",
        "client-key-data": "Y2xpZW50LWtleS1kYXRh",
      },
    },
  ],
}
`;

exports[`api shoots should return shoot info: body.kubeconfigGardenlogin 1`] = `
Object {
  "apiVersion": "v1",
  "clusters": Array [
    Object {
      "cluster": Object {
        "certificate-authority-data": "Y2EuY3J0",
        "extensions": Array [
          Object {
            "extension": Object {
              "gardenClusterIdentity": "kubernetes",
              "shootRef": Object {
                "name": "barShoot",
                "namespace": "garden-foo",
              },
            },
            "name": "client.authentication.k8s.io/exec",
          },
        ],
        "server": "https://api.barShoot.foo.shoot.test",
      },
      "name": "garden-foo--barShoot-external",
    },
  ],
  "contexts": Array [
    Object {
      "context": Object {
        "cluster": "garden-foo--barShoot-external",
        "namespace": "default",
        "user": "garden-foo--barShoot",
      },
      "name": "garden-foo--barShoot-external",
    },
  ],
  "current-context": "garden-foo--barShoot-external",
  "kind": "Config",
  "users": Array [
    Object {
      "name": "garden-foo--barShoot",
      "user": Object {
        "exec": Object {
          "apiVersion": "client.authentication.k8s.io/v1beta1",
          "args": Array [
            "get-client-certificate",
          ],
          "command": "kubectl-gardenlogin",
          "installHint": "Follow the instructions on
- https://github.com/gardener/gardenlogin#installation to install and
- https://github.com/gardener/gardenlogin#configure-gardenlogin to configure the gardenlogin credential plugin.

The following is a sample configuration for gardenlogin as well as gardenctl. Place the file under ~/.garden/gardenctl-v2.yaml.

---
gardens:
  - identity: kubernetes
    kubeconfig: \\"<path-to-garden-cluster-kubeconfig>\\"
...

Alternatively, you can run the following gardenctl command:

$ gardenctl config set-garden kubernetes --kubeconfig \\"<path-to-garden-cluster-kubeconfig>\\"

Note that the kubeconfig refers to the path of the garden cluster kubeconfig which you can download from the Account page.",
          "interactiveMode": "IfAvailable",
          "provideClusterInfo": true,
        },
      },
    },
  ],
}
`;

exports[`api shoots should return three shoots 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
]
`;

exports[`api shoots should return three shoots 2`] = `
Object {
  "items": Array [
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "name": "fooShoot",
        "namespace": "garden-foo",
        "uid": 1,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": Object {
        "advertisedAddresses": Array [
          Object {
            "name": "external",
            "url": "https://api.fooShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--fooShoot",
      },
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "bar@example.org",
        },
        "name": "barShoot",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "barPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": Object {
        "advertisedAddresses": Array [
          Object {
            "name": "external",
            "url": "https://api.barShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--barShoot",
      },
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "name": "dummyShoot",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "barSecretName",
        "seedName": "infra4-seed-without-secretRef",
      },
      "status": Object {
        "technicalID": "shoot--foo--dummyShoot",
      },
    },
  ],
}
`;

exports[`api shoots when served from cache should return all shoots 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": undefined,
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api shoots when served from cache should return all shoots 2`] = `
Object {
  "apiVersion": "v1",
  "items": Array [
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": Object {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "fooShoot",
        "namespace": "garden-foo",
        "uid": 1,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": Object {
        "advertisedAddresses": Array [
          Object {
            "name": "external",
            "url": "https://api.fooShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--fooShoot",
      },
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "bar@example.org",
        },
        "labels": Object {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "barShoot",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "barPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": Object {
        "advertisedAddresses": Array [
          Object {
            "name": "external",
            "url": "https://api.barShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--barShoot",
      },
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": Object {
          "shoot.gardener.cloud/status": "unhealthy",
        },
        "name": "dummyShoot",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "barSecretName",
        "seedName": "infra4-seed-without-secretRef",
      },
      "status": Object {
        "technicalID": "shoot--foo--dummyShoot",
      },
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "admin@example.org",
        },
        "labels": Object {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "infra1-seed",
        "namespace": "garden",
        "uid": 4,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "foo-purpose",
        "region": "foo-west",
        "secretBindingName": "soil-infra1",
        "seedName": "soil-infra1",
      },
      "status": Object {
        "advertisedAddresses": Array [
          Object {
            "name": "external",
            "url": "https://api.infra1-seed.garden.shoot.test",
          },
        ],
        "technicalID": "shoot--garden--infra1-seed",
      },
    },
  ],
  "kind": "List",
}
`;

exports[`api shoots when served from cache should return all unhealthy shoots 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": undefined,
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api shoots when served from cache should return all unhealthy shoots 2`] = `
Object {
  "apiVersion": "v1",
  "items": Array [
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": Object {
          "shoot.gardener.cloud/status": "unhealthy",
        },
        "name": "dummyShoot",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "barSecretName",
        "seedName": "infra4-seed-without-secretRef",
      },
      "status": Object {
        "technicalID": "shoot--foo--dummyShoot",
      },
    },
  ],
  "kind": "List",
}
`;

exports[`api shoots when served from cache should return shoots for a single namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api shoots when served from cache should return shoots for a single namespace 2`] = `
Object {
  "apiVersion": "v1",
  "items": Array [
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": Object {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "fooShoot",
        "namespace": "garden-foo",
        "uid": 1,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": Object {
        "advertisedAddresses": Array [
          Object {
            "name": "external",
            "url": "https://api.fooShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--fooShoot",
      },
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "bar@example.org",
        },
        "labels": Object {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "barShoot",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "barPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": Object {
        "advertisedAddresses": Array [
          Object {
            "name": "external",
            "url": "https://api.barShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--barShoot",
      },
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": Object {
          "shoot.gardener.cloud/status": "unhealthy",
        },
        "name": "dummyShoot",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "barSecretName",
        "seedName": "infra4-seed-without-secretRef",
      },
      "status": Object {
        "technicalID": "shoot--foo--dummyShoot",
      },
    },
  ],
  "kind": "List",
}
`;
